# ATK-DNESP32S3-Board

./: README.md
1_docs/: DNESP32S3 board IO pin allocation table.xlsx  Developing_With_Arduino.md  Developing_With_ESP_IDF.md  Developing_With_MicroPython.md
1_docs/3_figures/examples/iic/: Thumbs.db
1_docs/3_figures/examples/wifi_ble/: Thumbs.db
1_docs/3_figures/image/: Thumbs.db
2_examples/1_ESP_IDF/1_basic_routines/00_basic/: README.md
2_examples/1_ESP_IDF/1_basic_routines/01_led/: CMakeLists.txt  README.md
2_examples/1_ESP_IDF/1_basic_routines/02_key/: CMakeLists.txt  README.md
2_examples/1_ESP_IDF/1_basic_routines/02_key/components/BSP/: CMakeLists.txt
2_examples/1_ESP_IDF/1_basic_routines/03_exit/: CMakeLists.txt  README.md
2_examples/1_ESP_IDF/1_basic_routines/03_exit/components/BSP/: CMakeLists.txt
2_examples/1_ESP_IDF/1_basic_routines/03_exit/components/BSP/EXIT/: exit.c  exit.h
2_examples/1_ESP_IDF/1_basic_routines/04_uart/: CMakeLists.txt  README.md
2_examples/1_ESP_IDF/1_basic_routines/05_esp_timer/: CMakeLists.txt  README.md
2_examples/1_ESP_IDF/1_basic_routines/05_esp_timer/components/BSP/: CMakeLists.txt
2_examples/1_ESP_IDF/1_basic_routines/05_esp_timer/components/BSP/ESPTIM/: esptim.c  esptim.h
2_examples/1_ESP_IDF/1_basic_routines/06_gp_timer/: CMakeLists.txt  README.md  sdkconfig
2_examples/1_ESP_IDF/1_basic_routines/07_wdt/: CMakeLists.txt  README.md
2_examples/1_ESP_IDF/1_basic_routines/07_wdt/components/BSP/: CMakeLists.txt
2_examples/1_ESP_IDF/1_basic_routines/07_wdt/components/BSP/WDT/: wdt.c  wdt.h
2_examples/1_ESP_IDF/1_basic_routines/08-1_sw_pwm/: CMakeLists.txt  README.md  sdkconfig
2_examples/1_ESP_IDF/1_basic_routines/08-2_hw_pwm/: CMakeLists.txt  README.md
2_examples/1_ESP_IDF/1_basic_routines/09_iic_exio/: CMakeLists.txt  README.md
2_examples/1_ESP_IDF/1_basic_routines/10_iic_eeprom/: CMakeLists.txt  README.md
2_examples/1_ESP_IDF/1_basic_routines/11_oled/: CMakeLists.txt  README.md
2_examples/1_ESP_IDF/1_basic_routines/11_oled/components/BSP/: CMakeLists.txt
2_examples/1_ESP_IDF/1_basic_routines/11_oled/components/BSP/OLED/: oled.c  oled.h  oledfont.h
2_examples/1_ESP_IDF/1_basic_routines/12_spilcd/: CMakeLists.txt  README.md
2_examples/1_ESP_IDF/1_basic_routines/13_rtc/: CMakeLists.txt  README.md
2_examples/1_ESP_IDF/1_basic_routines/14_adc/: CMakeLists.txt  README.md
2_examples/1_ESP_IDF/1_basic_routines/14_adc/components/BSP/: CMakeLists.txt
2_examples/1_ESP_IDF/1_basic_routines/14_adc/components/BSP/ADC/: adc1.c  adc1.h
2_examples/1_ESP_IDF/1_basic_routines/15_ap3216c/: CMakeLists.txt  README.md
2_examples/1_ESP_IDF/1_basic_routines/19_ds18b20/: CMakeLists.txt  (+1 more)
2_examples/1_ESP_IDF/1_basic_routines/20_dht11/components/BSP/: CMakeLists.txt
2_examples/1_ESP_IDF/1_basic_routines/20_dht11/components/BSP/DHT11/: dht11.c  dht11.h
2_examples/1_ESP_IDF/1_basic_routines/20_dht11/components/BSP/LCD/: lcd.c
2_examples/1_ESP_IDF/1_basic_routines/22_qma6100p/components/BSP/: CMakeLists.txt
2_examples/1_ESP_IDF/1_basic_routines/22_qma6100p/components/BSP/KEY/: key.c  key.h
2_examples/1_ESP_IDF/1_basic_routines/22_qma6100p/components/BSP/QMA6100P/: qma6100p.c  qma6100p.h
2_examples/1_ESP_IDF/1_basic_routines/25_2_camera_photograph/components/BSP/: CMakeLists.txt
2_examples/1_ESP_IDF/1_basic_routines/25_2_camera_photograph/components/BSP/CAMERA/: camera.c
2_examples/1_ESP_IDF/1_basic_routines/25_2_camera_photograph/components/BSP/SDIO/: exfuns.c  exfuns.h
2_examples/1_ESP_IDF/1_basic_routines/25_2_camera_photograph/components/BSP/SPI/: spi.c
2_examples/1_ESP_IDF/1_basic_routines/26_sd/components/BSP/: CMakeLists.txt
2_examples/1_ESP_IDF/1_basic_routines/26_sd/components/BSP/IIC/: iic.c
2_examples/1_ESP_IDF/1_basic_routines/30_music/components/BSP/: CMakeLists.txt
2_examples/1_ESP_IDF/1_basic_routines/30_music/components/BSP/I2S/: i2s.c
2_examples/1_ESP_IDF/1_basic_routines/32_videoplayer/components/BSP/: CMakeLists.txt
2_examples/1_ESP_IDF/1_basic_routines/32_videoplayer/components/BSP/ES8388/: es8388.c
2_examples/1_ESP_IDF/1_basic_routines/32_videoplayer/components/BSP/ESPTIM/: esptim.c  esptim.h
2_examples/1_ESP_IDF/1_basic_routines/35_usb_sd_u/components/BSP/: CMakeLists.txt
2_examples/1_ESP_IDF/1_basic_routines/35_usb_sd_u/components/BSP/SDIO/: spi_sdcard.c
2_examples/1_ESP_IDF/1_basic_routines/36_bootloader/components/BSP/: CMakeLists.txt
2_examples/1_ESP_IDF/1_basic_routines/36_bootloader/components/BSP/24CXX/: 24cxx.h
2_examples/1_ESP_IDF/1_basic_routines/36_bootloader/components/BSP/AP3216C/: ap3216c.c
2_examples/1_ESP_IDF/1_basic_routines/36_bootloader/components/BSP/CAMERA/: camera.c
2_examples/1_ESP_IDF/1_basic_routines/36_bootloader/components/BSP/EMISSION/: emission.c  emission.h
2_examples/1_ESP_IDF/1_basic_routines/36_bootloader/components/BSP/ES8388/: es8388.h
2_examples/1_ESP_IDF/1_basic_routines/36_bootloader/components/BSP/ESPTIM/: esptim.c  esptim.h
2_examples/1_ESP_IDF/1_basic_routines/36_bootloader/components/BSP/I2S/: i2s.c  i2s.h
2_examples/1_ESP_IDF/1_basic_routines/36_bootloader/components/BSP/LCD/: lcd.c  lcd.h
2_examples/1_ESP_IDF/1_basic_routines/36_bootloader/components/BSP/QMA6100P/: qma6100p.c  qma6100p.h
2_examples/1_ESP_IDF/1_basic_routines/36_bootloader/components/BSP/RENC/: renc.c
2_examples/1_ESP_IDF/1_basic_routines/36_bootloader/components/BSP/RTC/: esp_rtc.h
2_examples/1_ESP_IDF/1_basic_routines/36_bootloader/components/BSP/SDIO/: exfuns.h  spi_sdcard.c  spi_sdcard.h
2_examples/1_ESP_IDF/1_basic_routines/36_bootloader/components/BSP/SENSOR/: sensor.c  sensor.h
2_examples/1_ESP_IDF/1_basic_routines/36_bootloader/components/MJPEG/: CMakeLists.txt
2_examples/1_ESP_IDF/3_freertos_routines/06_Queue_operation/components/BSP/: CMakeLists.txt
2_examples/1_ESP_IDF/5_ai_routines/01_face_detection/components/BSP/: CMakeLists.txt
2_examples/1_ESP_IDF/5_ai_routines/01_face_detection/components/BSP/CAMERA/: camera.c
2_examples/4_SD_card_root_directory_file/PICTURE/: Thumbs.db
3_firmware/: README.md
(+883 files in other folders)
